statik web site oluşturuldu

--- a/index.html
+++ b/index.html
@@ -6,17 +6,212 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="/wwwroot/css/bootstrap.min.css" type="text/css">
-
-    <title>Hello, world!</title>
+    <link rel="stylesheet" href="./wwwroot/css/bootstrap.min.css" type="text/css">
+    <link rel="stylesheet" href="./wwwroot/css/site.cs" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Merriweather:300|Raleway:400,700" rel="stylesheet">
+    <title>Cengiz Altürk</title>
   </head>
   <body>
-    <h1>Hello, world!</h1>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-3">
+          <!-- başkısım -->
+          <div class="text-center" >
+              <div class="icerik ">
+                  <img class="rounded-circle resim" src="./wwwroot/image/cv.jpeg" alt="Cengiz Altürk">
+
+                  <h6 class= "text-muted">Cengiz Altürk</h6>
+
+
+                              <ul class="nav flex-column yaziLink">
+                                  <li class="nav-item">
+                                    <a class="nav-link active" data-toggle="tab" href="#about">About me</a>
+                                  </li>
+                                  <li class="nav-item">
+                                    <a class="nav-link" data-toggle="tab" href="#resume">Resume</a>
+                                  </li>
+                                  <li class="nav-item">
+                                    <a class="nav-link" data-toggle="tab" href="#iletisim">Contact</a>
+                                  </li>
+                                </ul>
+
+                                <!-- Tab panes -->
+
+
+
+            </div>
+              <p class="text-muted">© 2019 </p>
+          </div>
+
+
+
+
+        </div>
+        <div class="col-md-9">
+
+          <!-- içerik-->
+          <div class="tab-content">
+            <div class="tab-pane container active" id="about">
+              <div class="about">
+                <h3> Hakkımda</h3>
+                <hr>
+                <p>
+                Merhaba ,
+                Bilgisayar benim ilgi alanım çocukluğumda başlayan bu ilgim okul hayatımda da ilgim üzerine okuyarak kendimi geliştirdim.
+                Bir projeye başlamak yada bir problemle uğraşmak ve onu çözmek için saatlerce uğraşmak ve problemi
+                veya proje bittimi çocuklar gibi sevinmenin heycanı her zaman içimde olan bu aşk beni bu alanda hem araştırma ve kendini geliştirme konusunda çok yardımcı olmuştur.
+                Üzerinde çalıştığım alanlar Gömülü sistemler,Sistem yöneticiliği,Siber güvenlik ve saldırı,Veri madenciliği<br>
+
+                Şuan Halkbankta stajımı yapmaktayım.
+
+
+
+              </p>
+              </div>
+
+
+
+            </div>
+            <!-- Özet-->
+            <div class="tab-pane container fade" id="resume">
+              <div class="about2">
+                <ul class="nav nav-pills justify-content-center">
+                  <li class="nav-item">
+                    <a class="nav-link active" data-toggle="tab" href="#is"> Deneyim</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" data-toggle="tab" href="#yetenek">Yetkinlikler</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" data-toggle="tab" href="#egitim">Egitim</a>
+                  </li>
+                </ul>
+
+                  <!-- Tab panes -->
+                  <div class="tab-content">
+                    <!--iş-->
+                    <div class="tab-pane container active" id="is">
+                      <span class="baslik">Halkbank</span><br>
+                      <span class="tür">Staj</span><br>
+                      <span class="yer">İstanbul,Turkey</span><br>
+                      <span class="zaman">agustos 2019- eylül 2019</span><br>
+                      <ul>
+                        <li>MainFrame,Db2,JCL,EGL,COBOL,<abbr title="Visual Age Generator">VAG </abbr><br>
+                        Banka alt yapısı teknolojileri</li>
+                        <li>kredi hesaplama  uygulaması<br>
+                        Kullanılan teknolojiler: .net core ,wep api , postgresql, ajax</li>
+
+                      </ul>
+
+                    </div>
+
+                    <!--Yetenek-->
+
+                    <div class="tab-pane container fade" id="yetenek">
+
+                      <pre>
+      Programlama Dili : C, C++, C#, JAVA, Matlab(Temel)
+      Mobil : Android
+      Web Programlama : Asp.net MVC, PHP, node.js
+      Web Tasarım : JavaScript, JQuery CSS3 Bootstrap
+      Veri Tabanı : MySQL,SQL server, Mongo DB, PostgreSQL
+      Kullanılan Teknolojiler :  Bulut (Firabase - ThingSpeak) Sanalaştırma (Vmware ), Devre Çizim (Proteus)
+      Kullanılan İşletim Sistemi : Windows, Linux(Debian tabanlı)
+      Üzerinde Çalıştığım alanlar: Ağ yönetimi, Sistem ve Sunucu yönetimi,Gömülü Sistemler, Siber Güvenlik
+                      </pre>
+
+                    </div>
+
+                    <!--Eğitim-->
+                    <div class="tab-pane container fade" id="egitim">
+                      <span class="baslik">Sakarya Universitesi</span><br>
+                      <span class="tür">Bilgisayar Mühendisliği</span><br>
+                      <span class="yer">Sakarya,Turkey</span><br>
+                      <span class="zaman">2014 - 2019</span><br>
+                      <ul>
+                        <li>Not : 3.38/4</li>
+                        <li>
+                          <!-- Button trigger modal -->
+                          <button type="button" class="btn btn-sm" data-toggle="modal" data-target="#exampleModal">
+                            Transkript
+                          </button>
+
+                          <!-- Modal -->
+                          <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                            <div class="modal-dialog modal-xl" role="document">
+                              <div class="modal-content modal-xl">
+                                <div class="modal-header">
+                                  <h5 class="modal-title" id="exampleModalLabel">Transkript</h5>
+                                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                    <span aria-hidden="true">&times;</span>
+                                  </button>
+                                </div>
+                                <div class="modal-body text-center">
+                                  <img src="./wwwroot/image/transkript.png"></img>
+
+                                </div>
+
+                              </div>
+                            </div>
+                          </div>
+
+
+
+
+                        </li>
+
+                      </ul>
+                      <span class="baslik">Gaziosmanpaşa Mesleki ve Teknik Anadolu Lisesi</span><br>
+                      <span class="tür">BİLİŞİM TEKNOLOJİLERİ ALANI</span><br>
+                      <span class="yer">İstanbul,Turkey</span><br>
+                      <span class="zaman">2009 - 2013</span><br>
+                      <ul>
+                        <li>Teknik lise</li>
+                        <li>Not: 69.09</li>
+
+                      </ul>
+                    </div>
+                  </div>
+
+
+
+
+              </div>
+
+
+
+            </div>
+
+            <div class="tab-pane container fade" id="iletisim">
+              <div class="about3">
+                <h3> İletişim</h3>
+                <hr>
+                <pre>
+                Adres : Darıca / Kocaeli / Turkey
+                Email : cngzltrk@gmail.com
+      
+
+              </pre>
+              </div>
+
+
+            </div>
+          </div>
+
+
+
+        </div>
+    </div>
+  </div>
+
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+
+
+
   </body>
 </html>
