statik web site oluşturulduasd

--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="./wwwroot/css/bootstrap.min.css" type="text/css">
     <link rel="stylesheet" href="./wwwroot/css/site.cs" type="text/css">
-    <link href="https://fonts.googleapis.com/css?family=Merriweather:300|Raleway:400,700" rel="stylesheet">
     <title>Cengiz Altürk</title>
   </head>
   <body>
@@ -18,7 +17,7 @@
           <!-- başkısım -->
           <div class="text-center" >
               <div class="icerik ">
-                  <img class="rounded-circle resim" src="./wwwroot/image/cv.jpeg" alt="Cengiz Altürk">
+                <!--  <img class="rounded-circle resim" src="./wwwroot/image/cv.jpeg" alt="Cengiz Altürk">-->
 
                   <h6 class= "text-muted">Cengiz Altürk</h6>
 
@@ -189,7 +188,7 @@
                 <pre>
                 Adres : Darıca / Kocaeli / Turkey
                 Email : cngzltrk@gmail.com
-      
+
 
               </pre>
               </div>
