--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="./wwwroot/css/bootstrap.min.css" type="text/css">
-    <link rel="stylesheet" href="./wwwroot/css/site.cs" type="text/css">
+    <link rel="stylesheet" href="./wwwroot/css/site.css" type="text/css">
     <title>Cengiz Altürk</title>
   </head>
   <body>
@@ -17,7 +17,7 @@
           <!-- başkısım -->
           <div class="text-center" >
               <div class="icerik ">
-                <!--  <img class="rounded-circle resim" src="./wwwroot/image/cv.jpeg" alt="Cengiz Altürk">-->
+                  <img class="rounded-circle resim" src="./wwwroot/image/cv.jpeg" alt="Cengiz Altürk">
 
                   <h6 class= "text-muted">Cengiz Altürk</h6>
 
@@ -39,7 +39,6 @@
 
 
             </div>
-              <p class="text-muted">© 2019 </p>
           </div>
 
 
@@ -180,14 +179,17 @@
 
 
             </div>
-
             <div class="tab-pane container fade" id="iletisim">
               <div class="about3">
                 <h3> İletişim</h3>
                 <hr>
                 <pre>
-                Adres : Darıca / Kocaeli / Turkey
-                Email : cngzltrk@gmail.com
+                İkamet : Darıca / Kocaeli / Turkey
+                Email: cngzltr
+                Üzerinde çalıştığım alanlar Gömülü sistemler,Sistem yöneticiliği,Siber güvenlik ve saldırı,Veri madenciliği<br>
+
+                Şuan Halkbankta stajımı yapmaktayım.
+
 
 
               </pre>
@@ -209,8 +211,5 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-
-
-
   </body>
 </html>
