--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                                   </button>
                                 </div>
                                 <div class="modal-body text-center">
-                                  <img src="./wwwroot/image/transkript.png"></img>
+                                  <img src="./wwwroot/image/transkript.PNG"></img>
 
                                 </div>
 
