--- a/index.html
+++ b/index.html
@@ -185,11 +185,7 @@
                 <hr>
                 <pre>
                 İkamet : Darıca / Kocaeli / Turkey
-                Email: cngzltr
-                Üzerinde çalıştığım alanlar Gömülü sistemler,Sistem yöneticiliği,Siber güvenlik ve saldırı,Veri madenciliği<br>
-
-                Şuan Halkbankta stajımı yapmaktayım.
-
+                Email: cngzlltrk@gmail.com
 
 
               </pre>
