--- a/index.html
+++ b/index.html
@@ -54,16 +54,17 @@
                 <h3> Hakkımda</h3>
                 <hr>
                 <p>
-                Merhaba ,
-                Bilgisayar benim ilgi alanım çocukluğumda başlayan bu ilgim okul hayatımda da ilgim üzerine okuyarak kendimi geliştirdim.
-                Bir projeye başlamak yada bir problemle uğraşmak ve onu çözmek için saatlerce uğraşmak ve problemi
-                veya proje bittimi çocuklar gibi sevinmenin heycanı her zaman içimde olan bu aşk beni bu alanda hem araştırma ve kendini geliştirme konusunda çok yardımcı olmuştur.
-                Üzerinde çalıştığım alanlar Gömülü sistemler,Sistem yöneticiliği,Siber güvenlik ve saldırı,Veri madenciliği<br>
-
-                Şuan Halkbankta stajımı yapmaktayım.
-
-
-
+                Merhaba ,<br>
+                Bilgisayar benim tutkum çocukluğumda başlayan bu tutkum okul hayatımda da tutukumun peşinden giderek tutkum üzerine okudum.
+                Bir projeye başlamanın heyecanı veya bir problemle uğraşmanın ve onu çözmek için saatlerce uğraşmak ve tüm emeklerimin sonucunda problemi
+                veya proje bittirdiğimde çocuklar gibi sevinmenin heycanı her zaman içimde olan bu aşk beni bu alanda araştırma, motivasyon ve kendini geliştirme konusunda çok yardımcı olmuştur.
+                <cite title="ATATÜRK">Görevini en iy yapan vatanını en çok sevendir<cite> ilkesiyle hedefim başarılı ve aranan bir mühendis olmaktır.  Çıktığım bu yolda ahlaklı, namuslu, aileme ve çevremdeki
+                  insanlara saygılı ve onlara yardımcı olabilebilecek bir birey olmaktır.
+                <br>
+                Üzerinde çalıştığım alanlar Gömülü sistemler,Sistem yöneticiliği,Siber güvenlik ve saldırı,Veri madenciliği
+                <br>
+                <br>
+                Şuan Halkbankta yazılım stajımı yapmaktayım.
               </p>
               </div>
 
@@ -96,8 +97,9 @@
                       <ul>
                         <li>MainFrame,Db2,JCL,EGL,COBOL,<abbr title="Visual Age Generator">VAG </abbr><br>
                         Banka alt yapısı teknolojileri</li>
-                        <li>kredi hesaplama  uygulaması<br>
-                        Kullanılan teknolojiler: .net core ,wep api , postgresql, ajax</li>
+                        <li>Kredi hesaplama  uygulaması<br>
+                        Kullanılan teknolojiler: .net core ,wep api , postgresql, ajax<br>
+                         <a href="gihub.com/cngzltrk/cngzltrk.github.io.git" class="btn btn-sm">Source code</a></li>
 
                       </ul>
 
@@ -108,15 +110,16 @@
                     <div class="tab-pane container fade" id="yetenek">
 
                       <pre>
-      Programlama Dili : C, C++, C#, JAVA, Matlab(Temel)
-      Mobil : Android
-      Web Programlama : Asp.net MVC, PHP, node.js
-      Web Tasarım : JavaScript, JQuery CSS3 Bootstrap
-      Veri Tabanı : MySQL,SQL server, Mongo DB, PostgreSQL
-      Kullanılan Teknolojiler :  Bulut (Firabase - ThingSpeak) Sanalaştırma (Vmware ), Devre Çizim (Proteus)
-      Kullanılan İşletim Sistemi : Windows, Linux(Debian tabanlı)
-      Üzerinde Çalıştığım alanlar: Ağ yönetimi, Sistem ve Sunucu yönetimi,Gömülü Sistemler, Siber Güvenlik
-                      </pre>
+
+  Programlama Dili : C, C++, C#, JAVA, Matlab(Temel)
+  Mobil : Android
+  Web Programlama : Asp.net MVC, PHP, node.js
+  Web Tasarım : JavaScript, JQuery CSS3 Bootstrap
+  Veri Tabanı : MySQL,SQL server, Mongo DB, PostgreSQL
+  Kullanılan Teknolojiler :  Bulut (Firabase - ThingSpeak) Sanalaştırma (Vmware ), Devre Çizim (Proteus)
+  Kullanılan İşletim Sistemi : Windows, Linux(Debian tabanlı)
+  Üzerinde Çalıştığım alanlar : Ağ yönetimi, Sistem ve Sunucu yönetimi,Gömülü Sistemler, Siber Güvenlik
+                  </pre>
 
                     </div>
 
@@ -183,12 +186,14 @@
               <div class="about3">
                 <h3> İletişim</h3>
                 <hr>
-                <pre>
-                İkamet : Darıca / Kocaeli / Turkey
-                Email: cngzlltrk@gmail.com
+                <p>
 
+                Email : cngzltrk@gmail.com<br>
+                Githup : cngzltrk <br>
+                Linkedin : cngzltrk <br>
 
-              </pre>
+                Adres : Darıca, Kocaeli / Turkey<br>
+              </p>
               </div>
 
 
