--- a/index.html
+++ b/index.html
@@ -58,10 +58,9 @@
                 Bilgisayar benim tutkum çocukluğumda başlayan bu tutkum okul hayatımda da tutukumun peşinden giderek tutkum üzerine okudum.
                 Bir projeye başlamanın heyecanı veya bir problemle uğraşmanın ve onu çözmek için saatlerce uğraşmak ve tüm emeklerimin sonucunda problemi
                 veya proje bittirdiğimde çocuklar gibi sevinmenin heycanı her zaman içimde olan bu aşk beni bu alanda araştırma, motivasyon ve kendini geliştirme konusunda çok yardımcı olmuştur.
-                <cite title="ATATÜRK">Görevini en iy yapan vatanını en çok sevendir<cite> ilkesiyle hedefim başarılı ve aranan bir mühendis olmaktır.  Çıktığım bu yolda ahlaklı, namuslu, aileme ve çevremdeki
+                <cite title="ATATÜRK"><b>Görevini en iyi yapan vatanını en çok sevendir</b></cite> ilkesiyle hedefim başarılı ve aranan bir mühendis olmaktır.  Çıktığım bu yolda ahlaklı, namuslu, aileme ve çevremdeki
                   insanlara saygılı ve onlara yardımcı olabilebilecek bir birey olmaktır.
-                <br>
-                Üzerinde çalıştığım alanlar Gömülü sistemler,Sistem yöneticiliği,Siber güvenlik ve saldırı,Veri madenciliği
+
                 <br>
                 <br>
                 Şuan Halkbankta yazılım stajımı yapmaktayım.
@@ -76,7 +75,7 @@
               <div class="about2">
                 <ul class="nav nav-pills justify-content-center">
                   <li class="nav-item">
-                    <a class="nav-link active" data-toggle="tab" href="#is"> Deneyim</a>
+                    <a class="nav-link active" data-toggle="tab" href="#is">Deneyim</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" data-toggle="tab" href="#yetenek">Yetkinlikler</a>
@@ -99,7 +98,7 @@
                         Banka alt yapısı teknolojileri</li>
                         <li>Kredi hesaplama  uygulaması<br>
                         Kullanılan teknolojiler: .net core ,wep api , postgresql, ajax<br>
-                         <a href="gihub.com/cngzltrk/cngzltrk.github.io.git" class="btn btn-sm">Source code</a></li>
+                         <a href="www.github.com/cngzltrk/cngzltrk.github.io.git" class="btn btn-sm" target="_blank">Source code</a></li>
 
                       </ul>
 
