--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                         Banka alt yapısı teknolojileri</li>
                         <li>Kredi hesaplama  uygulaması<br>
                         Kullanılan teknolojiler: .net core ,wep api , postgresql, ajax<br>
-                         <a href="https://github.com/cngzltrk/cngzltrk.github.io.git" class="btn btn-sm" target="_blank">Source code</a></li>
+                         <a href="https://github.com/cngzltrk/cngzltrk.github.io.git" class="" target="_blank">Source code</a></li>
 
                       </ul>
 
