--- a/index.html
+++ b/index.html
@@ -109,7 +109,6 @@
                     <div class="tab-pane container fade" id="yetenek">
 
                       <pre>
-
   Programlama Dili : C, C++, C#, JAVA, Matlab(Temel)
   Mobil : Android
   Web Programlama : Asp.net MVC, PHP, node.js
@@ -188,7 +187,7 @@
                 <p>
 
                 Email : cngzltrk@gmail.com<br>
-                Githup : cngzltrk <br>
+                Github : cngzltrk <br>
                 Linkedin : cngzltrk <br>
 
                 Adres : Darıca, Kocaeli / Turkey<br>
