resim responsive yapıldı

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                                   </button>
                                 </div>
                                 <div class="modal-body text-center">
-                                  <img src="./wwwroot/image/transkript.PNG"></img>
+                                  <img src="./wwwroot/image/transkript.PNG" class="img-fluid" ></img>
 
                                 </div>
 
