--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                         <li>
                           <!-- Button trigger modal -->
                           <button type="button" class="btn btn-sm" data-toggle="modal" data-target="#exampleModal">
-                            Transkript
+                            <p class="text-info">Transkript</p>
                           </button>
 
                           <!-- Modal -->
