--- a/index.html
+++ b/index.html
@@ -131,8 +131,8 @@
                         <li>Not : 3.38/4</li>
                         <li>
                           <!-- Button trigger modal -->
-                          <button type="button" class="btn btn-sm" data-toggle="modal" data-target="#exampleModal">
-                            <p class="text-info">Transkript</p>
+                          <button type="button" class="btn btn-sm text-danger" data-toggle="modal" data-target="#exampleModal">
+                            Transkript
                           </button>
 
                           <!-- Modal -->
