--- a/index.html
+++ b/index.html
@@ -109,14 +109,24 @@
                     <div class="tab-pane container fade" id="yetenek">
 
                       <pre>
-  Programlama Dili : C, C++, C#, JAVA, Matlab(Temel)
-  Mobil : Android
-  Web Programlama : Asp.net MVC, PHP, node.js
-  Web Tasarım : JavaScript, JQuery CSS3 Bootstrap
-  Veri Tabanı : MySQL,SQL server, Mongo DB, PostgreSQL
-  Kullanılan Teknolojiler :  Bulut (Firabase - ThingSpeak) Sanalaştırma (Vmware ), Devre Çizim (Proteus)
-  Kullanılan İşletim Sistemi : Windows, Linux(Debian tabanlı)
-  Üzerinde Çalıştığım alanlar : Ağ yönetimi, Sistem ve Sunucu yönetimi,Gömülü Sistemler, Siber Güvenlik
+<b>Programlama Dili</b> : C, C++, C#, JAVA, Matlab(Temel), Arduino
+<b>Mobil </b>: Android
+<b>Web Programlama </b>: .NetCore , Asp.net MVC, PHP, node.js
+<b>Web Tasarım</b> : JavaScript, CSS3 , HTML, Bootstrap
+<b>Veri Tabanı</b> : MySQL,SQL server, Mongo DB, PostgreSQL
+<b>Kullanılan İşletim Sistemi </b>: Windows, Linux(Debian tabanlı)
+<b>Kullanılan Teknolojiler </b>: Verisyon takip (Githup=cngzltrk) , Bulut (Firabase - ThingSpeak) ,Sanalaştırma (Vmware ),Devre Çizim (Proteus)
+<b>Geliştirme Ortamı </b>: Visual Studio, phpstorm,valentine Studio(Postgre sql), NetBeans, Android Studio, Arduino ,Atom, Postman, Git
+
+<b>Hobi olarak üzerinde çalıştıklarım</b> :
+  Mikro denetleyici ile elektronik programlama kullandığım mikro denetleyici arduino ve nodemcu ile sensörlerle basit projeler ,bu projeleri
+bulut ortamında veri depolayıp istenilen platformda gösterip akıllı sistemler yapmak.
+  Siber güvenlik üzerinde daha çok saldırı tarafında kendimi geliştirmeye çalışıyorum.
+  Sistem ve sunucu yönetimi üzerine bulut üzerinde kendi sunucumu kurarak denemeler yapmak (CentOS -Ubuntu server üzerinde)
+<b>Bilgisayar donanım</b> :
+  Lisede bilgisayar üzerine okuduğumdan bilgisayar donanımı olarak yazılımsal uyuglamalar veya sistem kurulumu gibi işlemleri,
+  parça sök tak hata kaynak gibi işlemleri  kolaylıkla yapabilmekteyim
+
                   </pre>
 
                     </div>
