--- a/index.html
+++ b/index.html
@@ -124,8 +124,8 @@ bulut ortamında veri depolayıp istenilen platformda gösterip akıllı sisteml
   Siber güvenlik üzerinde daha çok saldırı tarafında kendimi geliştirmeye çalışıyorum.
   Sistem ve sunucu yönetimi üzerine bulut üzerinde kendi sunucumu kurarak denemeler yapmak (CentOS -Ubuntu server üzerinde)
 <b>Bilgisayar donanım</b> :
-  Lisede bilgisayar üzerine okuduğumdan bilgisayar donanımı olarak yazılımsal uyuglamalar veya sistem kurulumu gibi işlemleri,
-  parça sök tak hata kaynak gibi işlemleri  kolaylıkla yapabilmekteyim
+  Lisede bilgisayar üzerine okuduğumdan bilgisayar donanımı olarak yazılımsal uygulamalar veya sistem kurulumu gibi işlemleri,
+  parça sök tak sorun kaynağı gibi işlemleri kolaylıkla yapabilmekteyim
 
                   </pre>
 
