--- a/index.html
+++ b/index.html
@@ -90,14 +90,14 @@
                     <!--iş-->
                     <div class="tab-pane container active" id="is">
                       <span class="baslik">Halkbank</span><br>
-                      <span class="tür">Staj</span><br>
+                      <span class="tür">Yazılım Stajı</span><br>
                       <span class="yer">İstanbul,Turkey</span><br>
                       <span class="zaman">agustos 2019- eylül 2019</span><br>
                       <ul>
                         <li>MainFrame,Db2,JCL,EGL,COBOL,<abbr title="Visual Age Generator">VAG </abbr><br>
                         Banka alt yapısı teknolojileri</li>
                         <li>Kredi hesaplama  uygulaması<br>
-                        Kullanılan teknolojiler: .net core ,wep api , postgresql, ajax<br>
+                        Geliştirme Ortamı : .net core ,wep api , postgresql, ajax<br>
                          <a href="https://github.com/cngzltrk/.netCoreWeb-Api.git" class="" target="_blank">Source code</a></li>
 
                       </ul>
@@ -107,22 +107,101 @@
                     <!--Yetenek-->
 
                     <div class="tab-pane container fade" id="yetenek">
+                      <div class="row">
 
+                        <div class="col-md-8">
+                          <h4 class=""><b>Technical Skills</b></h4>
+                          <div class="progress bosluk">
+                            <div class="progress-bar text-left" style="width:72%">
+                              CSS3
+                            </div>
+                          </div>
+
+                          <div class="progress bosluk" >
+                            <div class="progress-bar bg-success text-left" style="width:90%">
+                              HTML5
+                            </div>
+                          </div>
+                          <div class="progress bosluk" >
+                            <div class="progress-bar bg-warning text-left" style="width:75%">
+                              Javascript
+                            </div>
+                          </div>
+                          <div class="progress bosluk" >
+                            <div class="progress-bar text-left bg-info" style="width:60%">
+                              NodeJs
+                            </div>
+                          </div>
+                          <div class="progress bosluk" >
+                            <div class="progress-bar text-left bg-danger" style="width:70%">
+                              PHP
+                            </div>
+                          </div>
+                          <div class="progress bosluk" >
+                            <div class="progress-bar text-left bg-seconder" style="width:60%">
+                              .NetCore MVC
+                            </div>
+                          </div>
+                          <div class="progress bosluk" >
+                            <div class="progress-bar text-left bg-dark" style="width:65%">
+                              .Net MVC
+                            </div>
+                          </div>
+                          <div class="progress bosluk" >
+                            <div class="progress-bar text-left bg-info" style="width:80%;">
+                              SQL
+                            </div>
+                          </div>
+                          <div class="progress bosluk" >
+                            <div class="progress-bar text-left " style="width:60%">
+                              C/C++
+                            </div>
+                          </div>
+                          <div class="progress bosluk" >
+                            <div class="progress-bar text-left bg-success" style="width:80%">
+                              C#
+                            </div>
+                          </div>
+                          <div class="progress bosluk">
+                            <div class="progress-bar text-left bg-info" style="width:75%">
+                              Java(Android)
+                            </div>
+                          </div>
+                          <div class="progress bosluk">
+                            <div class="progress-bar text-left bg-warning" style="width:60%">
+                              Arduino
+                            </div>
+                          </div>
+                          <div class="progress bosluk">
+                            <div class="progress-bar text-left bg-dark" style="width:45%">
+                              Matlab
+                            </div>
+                          </div>
+
+
+                        </div>
+                        <div class="col-4">
+
+                          <b> Software, Frameworks, libraries & APIs</b>
+                          <p>
+                            Git, Firebase-Thingspeak, Vmware, Proteus, Valentina Studio,
+                            Android, Visual Studio, phpstorm, Netbeans, Postman, Atom,
+                            Bootstrap, jQery, Socket.io, Express.js
+                             Camtasia, Arduino IDE
+
+                          </p>
+                        </div>
+                      </div>
                       <pre>
-<b>Programlama Dili</b> : C, C++, C#, JAVA, Matlab(Temel), Arduino
-<b>Mobil </b>: Android
-<b>Web Programlama </b>: .NetCore , Asp.net MVC, PHP, node.js
-<b>Web Tasarım</b> : JavaScript, CSS3 , HTML, Bootstrap
-<b>Veri Tabanı</b> : MySQL,SQL server, Mongo DB, PostgreSQL
-<b>Kullanılan İşletim Sistemi </b>: Windows, Linux(Debian tabanlı)
-<b>Kullanılan Teknolojiler </b>: Verisyon takip (Githup=cngzltrk) , Bulut (Firabase - ThingSpeak) ,Sanalaştırma (Vmware ),Devre Çizim (Proteus)
-<b>Geliştirme Ortamı </b>: Visual Studio, phpstorm,valentine Studio(Postgre sql), NetBeans, Android Studio, Arduino ,Atom, Postman, Git
+<b>Database </b>: MySQL,SQL server, Mongo DB, PostgreSQL
+<b>Operating System </b>: Windows, Linux(Debian)
 
-<b>Hobi olarak üzerinde çalıştıklarım</b> :
-  Mikro denetleyici ile elektronik programlama kullandığım mikro denetleyici arduino ve nodemcu ile sensörlerle basit projeler ,bu projeleri
-bulut ortamında veri depolayıp istenilen platformda gösterip akıllı sistemler yapmak.
-  Siber güvenlik üzerinde daha çok saldırı tarafında kendimi geliştirmeye çalışıyorum.
-  Sistem ve sunucu yönetimi üzerine bulut üzerinde kendi sunucumu kurarak denemeler yapmak (CentOS -Ubuntu server üzerinde)
+<b>Ve diğer bazıları</b> :
+  Sistem ve sunucu yönetimi üzerine GoogleCloud üzerinde kendi sunucumu kurarak denemeler yapmak
+  Video Edit kullandığım program Camtasio Studio Ornek youtube channel Deli&Dolu Helin
+  Mikro denetleyici ile elektronik programlama kullandığım mikro denetleyici arduino ve nodemcu
+  Siber güvenlik üzerinde daha çok saldırı tarafında  denemeler
+
 <b>Bilgisayar donanım</b> :
   Lisede bilgisayar üzerine okuduğumdan bilgisayar donanımı olarak yazılımsal uygulamalar veya sistem kurulumu gibi işlemleri,
   parça sök tak sorun kaynağı gibi işlemleri kolaylıkla yapabilmekteyim
