--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="./wwwroot/css/bootstrap.min.css" type="text/css">
     <link rel="stylesheet" href="./wwwroot/css/site.css" type="text/css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
     <title>Cengiz Altürk</title>
   </head>
   <body>
@@ -33,8 +34,9 @@
                                     <a class="nav-link" data-toggle="tab" href="#iletisim">Contact</a>
                                   </li>
                                 </ul>
-
-                                <!-- Tab panes -->
+                                <a href="https://www.linkedin.com/in/cngzltrk/" target="_blank"   style="font-size: 48px; color: Dodgerblue; padding-right: 5px;"><i class="fab fa-linkedin"></i></a>
+                                <a href="https://github.com/cngzltrk" target="_blank" style="font-size: 48px; color: black;"><i class="fab fa-github"></i></a>
+                                    <!-- Tab panes -->
 
 
 
