--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
                                     <a class="nav-link" data-toggle="tab" href="#iletisim">Contact</a>
                                   </li>
                                 </ul>
-                                <a href="https://www.linkedin.com/in/cngzltrk/" target="_blank"   style="font-size: 48px; color: Dodgerblue; padding-right: 5px;"><i class="fab fa-linkedin"></i></a>
-                                <a href="https://github.com/cngzltrk" target="_blank" style="font-size: 48px; color: black;"><i class="fab fa-github"></i></a>
+                                <a href="https://www.linkedin.com/in/cngzltrk/" target="_blank"    style="font-size: 48px; color: Dodgerblue; padding-right: 5px;"><i class="fab fa-linkedin uzerine"></i></a>
+                                <a href="https://github.com/cngzltrk" target="_blank"  style="font-size: 48px; color: black;"><i class="fab fa-github uzerine"></i></a>
                                     <!-- Tab panes -->
 
 
@@ -189,7 +189,7 @@
                             Git, Firebase-Thingspeak, Vmware, Proteus, Valentina Studio,
                             Android, Visual Studio, phpstorm, Netbeans, Postman, Atom,
                             Bootstrap, jQery, Socket.io, Express.js
-                             Camtasia, Arduino IDE
+                             Camtasia, Arduino IDE, Entity Framework, Adope Photoshop
 
                           </p>
                         </div>
