--- a/index.html
+++ b/index.html
@@ -179,6 +179,11 @@
                               Matlab
                             </div>
                           </div>
+                          <div class="progress bosluk">
+                            <div class="progress-bar text-left bg-dark" style="width:40%">
+                              Angular
+                            </div>
+                          </div>
 
 
                         </div>
@@ -189,7 +194,8 @@
                             Git, Firebase-Thingspeak, Vmware, Proteus, Valentina Studio,
                             Android, Visual Studio, phpstorm, Netbeans, Postman, Atom,
                             Bootstrap, jQery, Socket.io, Express.js
-                             Camtasia, Arduino IDE, Entity Framework, Adope Photoshop
+                             Camtasia, Arduino IDE, Entity Framework, Adope Photoshop,
+                             Angular Material,
 
                           </p>
                         </div>
