--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
                             </div>
                           </div>
                           <div class="progress bosluk">
-                            <div class="progress-bar text-left bg-dark" style="width:40%">
+                            <div class="progress-bar text-left bg-danger" style="width:40%">
                               Angular
                             </div>
                           </div>
