--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 <hr>
                 <p>
                 Merhaba ,<br>
-                Bilgisayar benim tutkum çocukluğumda başlayan bu tutkum okul hayatımda da tutukumun peşinden giderek tutkum üzerine okudum.
+                Bilgisayar benim tutkum çocukluğumda başlayan bu tutkum okul hayatımda da peşinden gittim.
                 Bir projeye başlamanın heyecanı veya bir problemle uğraşmanın ve onu çözmek için saatlerce uğraşmak ve tüm emeklerimin sonucunda problemi
                 veya proje bittirdiğimde çocuklar gibi sevinmenin heycanı her zaman içimde olan bu aşk beni bu alanda araştırma, motivasyon ve kendini geliştirme konusunda çok yardımcı olmuştur.
                 <cite title="ATATÜRK"><b>Görevini en iyi yapan vatanını en çok sevendir</b></cite> ilkesiyle hedefim başarılı ve aranan bir mühendis olmaktır.  Çıktığım bu yolda ahlaklı, namuslu, aileme ve çevremdeki
@@ -65,7 +65,7 @@
 
                 <br>
                 <br>
-                Şuan Halkbankta yazılım stajımı yapmaktayım.
+                Şuan Halkbankta donanım stajımı yapmaktayım.
               </p>
               </div>
 
@@ -90,6 +90,16 @@
                   <!-- Tab panes -->
                   <div class="tab-content">
                     <!--iş-->
+                    <div class="tab-pane container active" id="is">
+                      <span class="baslik">Halkbank</span><br>
+                      <span class="tür">Donanım Stajı</span><br>
+                      <span class="yer">İstanbul,Turkey</span><br>
+                      <span class="zaman">eylül 2019- ekim 2019</span><br>
+                      <ul>
+                        <li>MDT ,WDS, Active Disk Image<br></li>
+                      </ul>
+
+                    </div>
                     <div class="tab-pane container active" id="is">
                       <span class="baslik">Halkbank</span><br>
                       <span class="tür">Yazılım Stajı</span><br>
