--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
                 <br>
                 <br>
-                Şuan Halkbankta donanım stajımı yapmaktayım.
+                Şuan i2i Firmasında çalışmaktayım.
               </p>
               </div>
 
@@ -91,6 +91,14 @@
                   <div class="tab-content">
                     <!--iş-->
                     <div class="tab-pane container active" id="is">
+					  <span class="baslik">i2i Systems</span><br>
+                      <span class="tür">QA Specialist</span><br>
+                      <span class="yer">İstanbul,Turkey</span><br>
+                      <span class="zaman">Kasım 2019- Şu Anda</span><br>
+                      <ul>
+                        <li>SoapUI , Dbeaver<br>
+							Java Software Testing</li>
+                      </ul>
                       <span class="baslik">Halkbank</span><br>
                       <span class="tür">Donanım Stajı</span><br>
                       <span class="yer">İstanbul,Turkey</span><br>
