--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                        <li>Software performance testing with jmeter                      </li>
                        <li>Functional Testing with SoapUI , Postman, Testlink                      </li>
                        <li>Tracking Sowftware with jira ,gitlab,confluence                      </li>
-                       <li>Environments management ,Build, Test, Deploy Redhad Linux                      </li>
+                       <li>Environments management ,Build, Test, Deploy in Red hat Linux                      </li>
 
                       </ul>
 
