new  experience added

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
                 <br>
                 <br>
-                I am currently working at N11 as a devops engeenering
+                I am currently working at N11 as a devops engineer
                 
               </p>
               </div>
