--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                             <li>Container orchestration using Kubernetes and deploying applications with all
                               resources using helm</li>
                             <li>Managing operations on AWS environment.</li>
-                            <li>DevOps support for 4 diﬀerent project</li>
+                            <li>DevOps support for 4 different project</li>
                             <li>Development of deployment process, CI/CD pipelines using tools gitlab cicd,
                               jenkins, git, bitbucket/gitlab, AWS docker registry</li>
                             <li>Managing AWS resources, cost optimization, system automation.</li>
