--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
                 <br>
                 <br>
-                I am currently working as a devops engineer at Lean Scale
+                I am currently working as a devops engineer at DCA Food
                 
               </p>
               </div>
