--- a/index.html
+++ b/index.html
@@ -197,6 +197,36 @@
                         <div class="col-md-8">
                           <h4 class=""><b>Technical Skills</b></h4>
                           <div class="progress bosluk">
+                            <div class="progress-bar text-left" style="width:80%">
+                              Kubernetes
+                            </div>
+                          </div>
+                          <div class="progress bosluk">
+                            <div class="progress-bar text-left" style="width:72%">
+                              Helm
+                            </div>
+                          </div>
+                          <div class="progress bosluk">
+                            <div class="progress-bar text-left" style="width:95%">
+                              Docker
+                            </div>
+                          </div>
+                          <div class="progress bosluk">
+                            <div class="progress-bar text-left" style="width:65%">
+                              Go
+                            </div>
+                          </div>
+                          <div class="progress bosluk">
+                            <div class="progress-bar text-left" style="width:85%">
+                              Git
+                            </div>
+                          </div>
+                          <div class="progress bosluk">
+                            <div class="progress-bar text-left" style="width:72%">
+                              Typescript
+                            </div>
+                          </div>
+                          <div class="progress bosluk">
                             <div class="progress-bar text-left" style="width:72%">
                               CSS3
                             </div>
@@ -372,7 +402,7 @@
                 Github    : cngzltrk <br>
                 Linkedin  : cngzltrk <br>
 
-                Adres : Darıca, Kocaeli / Turkey<br>
+                Adres : Bornava, Izmir / Turkey<br>
               </p>
               </div>
 
