--- a/index.html
+++ b/index.html
@@ -197,32 +197,32 @@
                         <div class="col-md-8">
                           <h4 class=""><b>Technical Skills</b></h4>
                           <div class="progress bosluk">
-                            <div class="progress-bar text-left" style="width:80%">
+                            <div class="progress-bar text-left bg-dark" style="width:80%">
                               Kubernetes
                             </div>
                           </div>
                           <div class="progress bosluk">
-                            <div class="progress-bar text-left" style="width:72%">
+                            <div class="progress-bar text-left bg-warning" style="width:72%">
                               Helm
                             </div>
                           </div>
                           <div class="progress bosluk">
-                            <div class="progress-bar text-left" style="width:95%">
+                            <div class="progress-bar text-left bg-success" style="width:95%">
                               Docker
                             </div>
                           </div>
                           <div class="progress bosluk">
-                            <div class="progress-bar text-left" style="width:65%">
+                            <div class="progress-bar text-left bg-light" style="width:65%">
                               Go
                             </div>
                           </div>
                           <div class="progress bosluk">
-                            <div class="progress-bar text-left" style="width:85%">
+                            <div class="progress-bar text-left bg-primary" style="width:85%">
                               Git
                             </div>
                           </div>
                           <div class="progress bosluk">
-                            <div class="progress-bar text-left" style="width:72%">
+                            <div class="progress-bar text-left bg-secondary" style="width:72%">
                               Typescript
                             </div>
                           </div>
