--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
                             </div>
                           </div>
                           <div class="progress bosluk">
-                            <div class="progress-bar text-left bg-light" style="width:65%">
+                            <div class="progress-bar text-left bg-danger" style="width:65%">
                               Go
                             </div>
                           </div>
