--- a/index.html
+++ b/index.html
@@ -102,9 +102,16 @@
                       <span class="">DCA Food is part of Lean Scale, Dubai based digital venture builder. Connects local and
                         international restaurants to the digital world</span>
 
-                      <ul>
-                        <li></li>                    
-                      </ul>
+                        <ul>
+                          <li>Container orchestration using Kubernetes and deploying applications with all
+                            resources using helm</li>
+                          <li>Managing operations on AWS environment.</li>
+                          <li>Development of deployment process, CI/CD pipelines using tools gitlab cicd,
+                            jenkins, git, gitlab, AWS docker registry</li>
+                          <li>Managing AWS resources, cost optimization, system automation.</li>
+                          <li>Monitoring and logging using tools such as Prometheus ,Netdata , Elastic stack, Graylog</li>
+                          <li>Troubleshooting</li>
+
 
 					
                         <span class="baslik">Lean Scale</span><br>
@@ -119,7 +126,7 @@
                             <li>Managing operations on AWS environment.</li>
                             <li>DevOps support for 4 different project</li>
                             <li>Development of deployment process, CI/CD pipelines using tools gitlab cicd,
-                              jenkins, git, bitbucket/gitlab, AWS docker registry</li>
+                              jenkins, git, gitlab AWS docker registry</li>
                             <li>Managing AWS resources, cost optimization, system automation.</li>
                             <li>Monitoring and logging using tools such as Prometheus ,Netdata , Elastic stack, Graylog</li>
                             <li>Troubleshooting</li>
@@ -133,7 +140,7 @@
                               <span class="zaman">01/2022 - 05/2022</span><br>
                               <span class="">N11 is an online e-commerce site and one of the most famous e-commerce site in Turkey.</span>
                               <ul>
-                              <li>Development of deployment process, CI/CD pipelines using tools jenkins, git, bitbucket/gitlab, nexus</li>
+                              <li>Development of deployment process, CI/CD pipelines using tools jenkins, git, gitlab, nexus</li>
                               <li>Implementation of monitoring tools to applications and environments using tools Prometheus and Zabbix</li>
                               <li>Troubleshooting</li>
 
