--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
 
                               <ul class="nav flex-column yaziLink">
                                   <li class="nav-item">
-                                    <a class="nav-link " data-toggle="tab" href="#about">About me</a>
+                                    <a class="nav-link active " data-toggle="tab" href="#about">About me</a>
                                   </li>
                                   <li class="nav-item">
-                                    <a class="nav-link active" data-toggle="tab" href="#resume">Resume</a>
+                                    <a class="nav-link  " data-toggle="tab" href="#resume">Resume</a>
                                   </li>
                                   <li class="nav-item">
                                     <a class="nav-link" data-toggle="tab" href="#contact">Contact</a>
@@ -51,7 +51,7 @@
 
           <!-- içerik-->
           <div class="tab-content">
-            <div class="tab-pane container" id="about">
+            <div class="tab-pane container active" id="about">
               <div class="about">
                 <h3> About me</h3>
                 <hr>
@@ -75,7 +75,7 @@
 
             </div>
             <!-- Özet-->
-            <div class="tab-pane container fade active" id="resume">
+            <div class="tab-pane container fade " id="resume">
               <div class="about2">
                 <ul class="nav nav-pills justify-content-center">
                   <li class="nav-item">
